melior/src/dialect/snapshots/melior__dialect__arith__tests__arith.uitofp.snap
---
source: melior/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: i32) -> f64 {
    %0 = arith.uitofp %arg0 : i32 to f64
    return %0 : f64
  }
}

