melior/src/dialect/snapshots/melior__dialect__arith__tests__create_constant.snap
---
source: melior/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: i64) -> i64 {
    %c42_i64 = arith.constant 42 : i64
    return %c42_i64 : i64
  }
}

