melior/src/dialect/snapshots/melior__dialect__arith__tests__run_on_function_in_nested_module.snap
---
source: melior/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @add(%arg0: i64, %arg1: i64) -> i64 {
    %0 = arith.addi %arg0, %arg1 : i64
    return %0 : i64
  }
}

